--- a/src/components/Public/shared/header.css
+++ b/src/components/Public/shared/header.css
@@ -1,58 +1,119 @@
-.header {
-    display: flex;
-    justify-content: center;
-    background-color: #fff;
-    padding: 22px;
-    position: relative;
-    margin-top: 30px;
-    height: auto;
-    width: 100%;
-    padding-bottom: 35px;
-  }
-  .navBar {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    gap: 10%;
-  }
-  .navBar a {
-    font-size: 17px;
-    text-decoration: none;
-    color: darkgrey;
-  }
-  .navBar a:hover {
-    color: black;
-  }
-  .navBar a:focus {
-    color: black;
-    font-weight: 600;
-  }
-  
-  .toggle-button {
-    position: absolute;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
+img {
+  border-radius: 5px;
 }
-    
-.toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: black;
-    border-radius: 10px;
-    }
 
-@media (max-width: 800px) {
-    .toggle-button {
-        display: flex;
-    }
-    .navBar {
-        margin-top: 35px;
-        display: none; 
-        flex-direction: column;
-    }
-    
+#logouticon {
+  margin-left: 65px;
 }
-        
+
+.navigation-clean {
+  background: #323B42;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+  border-radius: 0;
+  box-shadow: none;
+  border: none;
+  margin-bottom: 0;
+}
+
+@media (max-width:767px) {
+  .navigation-clean {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .navigation-clean .navbar-header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .navigation-clean .navbar-nav .open .dropdown-menu {
+    box-shadow: none;
+  }
+  .navigation-clean .navbar-nav .open .dropdown-menu > li > a {
+    color: #37434d;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    line-height: 1;
+  }
+}
+
+.navigation-clean .navbar-brand {
+  font-weight: bold;
+  color: inherit;
+}
+
+.navigation-clean .navbar-brand:hover {
+  color: #222;
+}
+
+.navigation-clean .navbar-toggle {
+  border-color: #ddd;
+}
+
+.navigation-clean .navbar-toggle:hover, .navigation-clean .navbar-toggle:focus {
+  background: none;
+}
+
+.navigation-clean .navbar-toggle .icon-bar {
+  background-color: #888;
+}
+
+.navigation-clean .navbar-collapse, .navigation-clean .navbar-form {
+  border-top-color: #ddd;
+}
+
+.navigation-clean .navbar-nav > .active > a, .navigation-clean .navbar-nav > .open > a {
+  background: none;
+  box-shadow: none;
+}
+
+.navigation-clean.navbar-default .navbar-nav > .active > a, .navigation-clean.navbar-default .navbar-nav > .active > a:focus, .navigation-clean.navbar-default .navbar-nav > .active > a:hover {
+  color: #77B710;
+  box-shadow: none;
+  background: none;
+  pointer-events: none;
+}
+
+.navigation-clean.navbar .navbar-nav > li > a {
+  padding-left: 18px;
+  padding-right: 18px;
+}
+
+.navigation-clean.navbar-default .navbar-nav > li > a {
+  color: white;
+}
+
+.navigation-clean.navbar-default .navbar-nav > li > a:focus, .navigation-clean.navbar-default .navbar-nav > li > a:hover {
+  color: white !important;
+  background-color: transparent;
+}
+
+.navigation-clean .navbar-nav > li > .dropdown-menu {
+  margin-top: -5px;
+  box-shadow: 0 4px 8px rgba(0,0,0,.1);
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+.navigation-clean .dropdown-menu > li > a:focus, .navigation-clean .dropdown-menu > li > a {
+  line-height: 2;
+  font-size: 14px;
+  color: #37434d;
+}
+
+.navigation-clean .dropdown-menu > li > a:focus, .navigation-clean .dropdown-menu > li > a:hover {
+  background: #eee;
+  color: inherit;
+}
+
+@media screen and (min-width: 300px) {
+  .navbar {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .navbar {
+    width: 65%;
+  }
+}
